Eclipse1/SalesforceCI/ Small Business/objects/Connect_Event__c.object
<CustomObject>
    <description>Event information from Connect Your Salesteam account.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectID__c</fullName>
        <description>Unique ID of record in Connect Your Salesteam.</description>
        <externalId>true</externalId>
        <label>CYSID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Link__c</fullName>
        <description>Link to the event itself.</description>
        <label>Event Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <description>The time this event is scheduled to begin.</description>
        <label>Event Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The default prices, in USD.</description>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Event_Start_Time__c</columns>
        <columns>Price__c</columns>
        <columns>Event_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>